--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coming Soon</title>
+    <title>Aussivo</title>
     <meta name="description" content="We're launching soon. Join our waitlist to be the first to know." />
-    <meta name="author" content="" />
+    <meta name="author" content="Aussivo" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;700&family=Fustat:wght@300;400;500;600;700&display=swap">
 
     <meta property="og:title" content="Coming Soon" />
