--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta property="og:title" content="Coming Soon" />
     <meta property="og:description" content="We're launching soon. Join our waitlist to be the first to know." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="/lovable-uploads/log.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="" />
-    <meta name="twitter:image" content="" />
+    <meta name="twitter:site" content="/lovable-uploads/log.png" />
+    <meta name="twitter:image" content="/lovable-uploads/log.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
